# Rental-Agent

./: .gitignore  README.md  package-lock.json  requirements.txt  web_voice_receptionist_srs_build_plan_web_rtc_gemini_eleven_labs_deepgram.md
apps/api/: README.md  pyproject.toml  requirements.txt
apps/api/app/: __main__.py  main.py
apps/api/app/core/: config.py
apps/api/app/data/: listings.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  appointment.py  availability.py  base.py  call.py  lead.py  property.py  unit.py
apps/api/app/repositories/: __init__.py  appointments.py  availability.py  calls.py  leads.py  listings.py
apps/api/app/routers/: admin.py  agent.py  rtc.py  tools.py
apps/api/app/schemas/: admin.py  rtc.py  sessions.py  tools.py
apps/api/app/services/: __init__.py  agent.py  asr.py  deepgram.py  llm.py  rtc.py  session_store.py  sessions.py  signaling.py  tools.py  tts.py
apps/api/scripts/: bootstrap_db.py
apps/api/tests/: test_agent_policy.py  test_deepgram_service.py  test_health.py  test_llm.py  test_sessions_service.py  test_signaling_service.py  test_tools_service.py  test_tts.py  test_utterance.py
apps/infra/: README.md  docker-compose.yml
apps/web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css  types.ts
apps/web/src/components/: BookingDialog.tsx  RecapForm.tsx  ResultsPanel.tsx  TranscriptPanel.tsx  VuMeter.tsx
apps/web/src/layouts/: MainLayout.tsx
apps/web/src/views/: AdminDashboard.tsx  CallPanel.tsx
apps/web/src/webrtc/: useRtcClient.ts
