[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rental-agent-api"
version = "0.1.0"
description = "FastAPI backend for the rental voice receptionist"
authors = [{ name = "Rental Agent Team", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "pydantic~=2.9",
    "pydantic-settings~=2.5",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.29",
    "alembic~=1.13",
    "databases[asyncpg]~=0.9",
    "redis~=5.0",
    "httpx[socks]~=0.27",
    "tenacity~=9.0",
    "google-generativeai~=0.6",
    "elevenlabs~=1.5",
    "deepgram-sdk~=3.1",
    "python-dotenv~=1.0",
    "python-jose[cryptography]~=3.3",
    "passlib[bcrypt]~=1.7",
    "structlog~=24.2",
    "orjson~=3.10",
    "aiocache~=0.12",
    "starlette~=0.40",
    "sentry-sdk~=2.14",
    "python-multipart~=0.0.9",
    "aiofiles~=23.2",
    "websockets~=12.0"
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.23",
    "httpx~=0.27",
    "ruff~=0.6",
    "mypy~=1.11",
    "coverage[toml]~=7.6"
]

[tool.setuptools.packages.find]
where = ["app"]
