[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rental-agent-api"
version = "0.1.0"
description = "FastAPI backend for the rental voice receptionist"
authors = [{ name = "Rental Agent Team", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "pydantic~=2.9",
    "pydantic-settings~=2.5",
    "faster-whisper~=1.0",
    "google-generativeai~=0.6",
    "edge-tts~=6.1",
    "gTTS~=2.5",
    "python-multipart~=0.0.9"
]

[project.optional-dependencies]
dev = [
    "httpx~=0.27",
    "pytest~=8.3",
    "pytest-asyncio~=0.23"
]

[tool.setuptools.packages.find]
where = ["app"]
